tests/expectations/compiler/bugs/b29220_fail.out
Error [ETYC0372144]: An array length must be small enough to fit in a `u32`
    --> compiler-test:6:12
     |
   6 |     return [val; COUNT * 9223372036854775807];
     |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
